# vmfinder

./: .gitignore  README.md  format.sh  pack.sh  pyproject.toml
vmfinder/: __init__.py  cli.py  cloud_image.py  cloud_init.py  completion.py  config.py  default_templates.py  disk.py  logger.py  template.py  virtiofsd.py  vm_manager.py
vmfinder/commands/: __init__.py  init.py  install_completion.py  template.py
vmfinder/commands/vm/: __init__.py  access.py  basic.py  cloud_init.py  config.py  manage.py
